--- a/src/Components/CoverSection/Covers/ThirdCover/ThirdCover.css
+++ b/src/Components/CoverSection/Covers/ThirdCover/ThirdCover.css
@@ -2,8 +2,26 @@
   margin-top: 12.5rem;
 }
 
+.image-section-third {
+  -o-object-fit: cover;
+     object-fit: cover;
+  padding: 0.625rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.image-section-third img {
+  padding-top: 2.8125rem;
+  width: 45vw;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 @media screen and (min-width: 300px) and (max-width: 800px) {
   .text-section-third {
     margin-top: 3.125rem;
+  }
+  .image-section-third img {
+    width: 80%;
   }
 }/*# sourceMappingURL=ThirdCover.css.map */
