--- a/src/Components/Items/Items.scss
+++ b/src/Components/Items/Items.scss
@@ -2,7 +2,7 @@
 
 .product-container {
   box-shadow: 0px 2px 14px #888888;
-  padding: toRem(10);
+  padding: toRem(15);
   height: toRem(400);
   width: toRem(400);
   display: flex;
@@ -10,8 +10,11 @@
   align-items: center;
   border-radius: toRem(7);
 }
+.product-container:hover {
+  border: 1px solid rgb(29, 35, 95);
+}
 .product-img {
-  height: 80%;
+  height: 75%;
   width: 100%;
   img {
     width: 100%;
@@ -45,4 +48,18 @@
     background-color: rgb(29, 35, 95);
     color: white;
   }
+}
+
+.review-sec {
+  display: flex;
+  gap: toRem(4);
+  margin-top: toRem(2);
+}
+.review-icons {
+  color: rgb(25, 160, 25);
+  font-size: toRem(20);
+}
+.review-icons-last {
+  color: rgb(25, 160, 25);
+  font-size: toRem(22);
 }
