--- a/src/Components/Ui/Ui.css
+++ b/src/Components/Ui/Ui.css
@@ -12,4 +12,4 @@
   align-items: center;
   flex-wrap: wrap;
   gap: 2.5rem;
-}/*# sourceMappingURL=UI.css.map */
+}/*# sourceMappingURL=Ui.css.map */
