--- a/src/Components/ContactForm/ContactForm.css
+++ b/src/Components/ContactForm/ContactForm.css
@@ -22,6 +22,7 @@
 
 .contact-form-container {
   margin-top: 0.625rem;
+  border-radius: 0.3125rem;
   width: 50rem;
   margin-left: auto;
   margin-right: auto;
