--- a/src/Components/ContactForm/ContactForm.scss
+++ b/src/Components/ContactForm/ContactForm.scss
@@ -23,6 +23,7 @@
 
 .contact-form-container {
   margin-top: toRem(10);
+  border-radius: toRem(5);
   width: toRem(800);
   margin-left: auto;
   margin-right: auto;
