--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -12,4 +12,4 @@
   align-items: center;
   flex-wrap: wrap;
   gap: 2.5rem;
-}/*# sourceMappingURL=Ui.css.map */
+}/*# sourceMappingURL=Card.css.map */
