--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -36,8 +36,8 @@
 }
 
 .cart-image-container {
-  width: 9.375rem;
-  height: 9.375rem;
+  width: 8.75rem;
+  height: 8.75rem;
   box-shadow: 0px 2px 14px #888888;
   -o-object-fit: cover;
      object-fit: cover;
@@ -95,6 +95,12 @@
 .empty-cart-text {
   font-size: 1.75rem;
   text-align: center;
+}
+
+.close-btn-container {
+  position: absolute;
+  bottom: 1.25rem;
+  right: 1.25rem;
 }
 
 .cart-btn {
