--- a/src/Components/Cart/Cart.scss
+++ b/src/Components/Cart/Cart.scss
@@ -35,8 +35,8 @@
   align-items: center;
 }
 .cart-image-container {
-  width: toRem(150);
-  height: toRem(150);
+  width: toRem(140);
+  height: toRem(140);
   box-shadow: 0px 2px 14px #888888;
   object-fit: cover;
   img {
@@ -91,6 +91,11 @@
 .empty-cart-text {
   font-size: toRem(28);
   text-align: center;
+}
+.close-btn-container {
+  position: absolute;
+  bottom: toRem(20);
+  right: toRem(20);
 }
 
 .cart-btn {
