--- a/src/Components/Cart/Cart.scss
+++ b/src/Components/Cart/Cart.scss
@@ -104,3 +104,11 @@
   align-items: center;
   padding-right: toRem(20);
 }
+
+// Media Quries for different screen sizes
+@media screen and (min-width: 290px) and (max-width: 480px) {
+  .cart-image-container {
+    width: toRem(130);
+    height: toRem(130);
+  }
+}
