--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -60,6 +60,16 @@ html {
   cursor: pointer;
 }
 
+// .cart-quantity {
+//   position: absolute;
+//   right: 22%;
+//   font-size: toRem(18);
+//   background-color: rgb(45, 192, 45);
+//   color: white;
+//   padding: 0 toRem(4);
+//   border-radius: toRem(20);
+// }
+
 // Media Quries for different screen sizes
 @media screen and (min-width: 290px) and (max-width: 480px) {
   html {
