--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -12,4 +12,11 @@
   align-items: center;
   flex-wrap: wrap;
   gap: 2.5rem;
+}
+
+@media screen and (min-width: 290px) and (max-width: 480px) {
+  .items-container {
+    width: 95%;
+    gap: 0.9375rem;
+  }
 }/*# sourceMappingURL=Card.css.map */
