--- a/src/Components/Items/Items.css
+++ b/src/Components/Items/Items.css
@@ -67,4 +67,22 @@
 .review-icons-last {
   color: rgb(25, 160, 25);
   font-size: 1.375rem;
+}
+
+@media screen and (min-width: 300px) and (max-width: 480px) {
+  .product-container {
+    height: 23.125rem;
+    width: 13.75rem;
+  }
+  .product-img {
+    height: 55%;
+    width: 100%;
+  }
+  .product-img img {
+    width: 100%;
+    height: 100%;
+  }
+  .product-price {
+    flex-direction: column;
+  }
 }/*# sourceMappingURL=Items.css.map */
