--- a/src/Components/Items/Items.scss
+++ b/src/Components/Items/Items.scss
@@ -63,3 +63,22 @@
   color: rgb(25, 160, 25);
   font-size: toRem(22);
 }
+
+@media screen and (min-width: 300px) and (max-width: 480px) {
+  .product-container {
+    height: toRem(370);
+    width: toRem(220);
+  }
+  .product-img {
+    height: 55%;
+    width: 100%;
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  .product-price {
+    flex-direction: column;
+  }
+}
